--- a/Site-Dashboard/style.jogo.css
+++ b/Site-Dashboard/style.jogo.css
@@ -221,3 +221,13 @@ nav ul li a:hover {
     font-size: 2.5vh;
     color: black;
 }
+#div_resultado{
+    color: #0057B6;;
+    text-align: center;
+    margin: 2vh auto;
+    width: 13vw; 
+    border-radius: 1vh;
+    box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 1);
+    background-color: #0057B6;
+    margin-left: 45vw;
+}
