--- a/Site-Dashboard/public/css/style.site.css
+++ b/Site-Dashboard/public/css/style.site.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url(assent/Soccer-bro.png);
+    background-image: url(../assent/Soccer-bro.png);
     background-repeat: no-repeat;
     background-color: #FFFFE0;
     background-size: 103vh;
