--- a/Site-Dashboard/public/css/style.dashboard.css
+++ b/Site-Dashboard/public/css/style.dashboard.css
@@ -83,13 +83,36 @@ nav ul li a:hover {
     margin-right: 45px;
 }
 
-.central {
-    margin-top: 20vh;
-    width: 50%;
+.esquerda {
+    display: flex;
+    flex-direction: column;
+    width: 33.3%;
     background-color: #FDCD1C;
+    height: 45vh;
+    border: solid 2px #0057B6;
+    margin-top: 20vh;
+}
+
+.meio {
+    display: flex;
+    flex-direction: column;
+    width: 33.3%;
     height: auto;
+    background-color: #FDCD1C;
+    height: 80vh;
     border: solid 2px #0057B6;
 }
+
+.direita {
+    display: flex;
+    flex-direction: column;
+    width: 33.3%;
+    background-color: #FDCD1C;
+    height: 45vh;
+    border: solid 2px #0057B6;
+    margin-top: 20vh;
+}
+
 
 .titulo {
     text-align: center;
@@ -97,6 +120,35 @@ nav ul li a:hover {
     color: black;
     font-weight: bold;
     animation: fadeInUp 1s ease;
+}
+#escudo img {
+    width: 25vw;
+    height: 13vh;
+    margin-left: 7vw;
+    flex: 0 0 auto;
+    border-radius: 1vh;
+    background-color: #0057B6;
+    border: 0.3vh solid white;
+    box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 0.1);
+    margin-left: 5vh;
+    margin-top: 4vh;
+}
+#escudo-baixo img {
+    width: 25vw;
+    height: 13vh;
+    margin-left: 7vw;
+    flex: 0 0 auto;
+    border-radius: 1vh;
+    background-color: #0057B6;
+    border: 0.3vh solid white;
+    box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 0.1);
+    margin-left: 5vh;
+    margin-top: 1vh;
+}
+
+#img-escudo{
+    width: 25vw;
+    height: 13vh;
 }
 
 @keyframes fadeInUp {
@@ -108,7 +160,7 @@ nav ul li a:hover {
     100% {
         opacity: 1;
         transform: translateY(0);
-       
+
     }
 }
 
@@ -121,7 +173,7 @@ nav ul li a:hover {
     line-height: 1.5;
     color: black;
     animation: fadeInUp 1s ease;
-  
+
 }
 
 .barra {
@@ -153,4 +205,26 @@ nav ul li a:hover {
         transform: scale(1);
         /* Termine na escala normal */
     }
+}
+
+.botao {
+    margin-top: 2vh;
+    background-color: #0057B6;
+    color: #FDCD1C;
+    font-size: 3vh;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1vh;
+    border: none;
+    border-radius: 6vh;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    height: 10vh;
+    width: 20vw;
+    margin-left: 10vh;
+}
+
+.botao:hover {
+    background-color: #FDCD1C;
+    color: #0057B6;
 }
