--- a/Site-Dashboard/public/css/style.dashboard.css
+++ b/Site-Dashboard/public/css/style.dashboard.css
@@ -113,6 +113,13 @@ nav ul li a:hover {
     margin-top: 20vh;
 }
 
+.textoCentral {
+    color: #0057B6;
+    margin-top: 3vh;
+    text-align: center;
+    font-size: 3vh;
+    animation: fadeInUp 1s ease;
+}
 
 .titulo {
     text-align: center;
@@ -121,6 +128,7 @@ nav ul li a:hover {
     font-weight: bold;
     animation: fadeInUp 1s ease;
 }
+
 #escudo img {
     width: 25vw;
     height: 13vh;
@@ -133,6 +141,7 @@ nav ul li a:hover {
     margin-left: 5vh;
     margin-top: 4vh;
 }
+
 #escudo-baixo img {
     width: 25vw;
     height: 13vh;
@@ -146,7 +155,7 @@ nav ul li a:hover {
     margin-top: 1vh;
 }
 
-#img-escudo{
+#img-escudo {
     width: 25vw;
     height: 13vh;
 }
