--- a/Site-Dashboard/public/css/style.treino.css
+++ b/Site-Dashboard/public/css/style.treino.css
@@ -121,8 +121,8 @@ nav ul li a:hover {
     background-color: #0057B6;
     border: 0.3vh solid white;
     box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 0.1);
-    margin-left: 1vw;
-    margin-right: 1vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
     margin-top: 2vh;
 }
 #escudo-baixo img {
@@ -134,8 +134,8 @@ nav ul li a:hover {
     background-color: #0057B6;
     border: 0.3vh solid white;
     box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 0.1);
-    margin-left: 1vw;
-    margin-right: 1vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
     margin-top: 2vh;
 }
 
@@ -237,7 +237,7 @@ nav ul li a:hover {
     cursor: pointer;
     height: 5vh;
     width: 10vw;
-    margin-left: 22.5vh;
+    margin-left: 20vh;
 }
 
 .botao:hover {
@@ -250,13 +250,9 @@ nav ul li a:hover {
     font-size: 2.5vh;
     color: black;
 }
-#div_resultado{
-    color: #0057B6;;
+
+#div_treino{
+    color: white;;
     text-align: center;
-    margin: 2vh auto;
-    width: 13vw; 
-    border-radius: 1vh;
-    box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 1);
-    background-color: #0057B6;
-    margin-left: 45vw;
+    background-color: red;
 }
