--- a/Site-Dashboard/public/css/style.login.css
+++ b/Site-Dashboard/public/css/style.login.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     background-color: #FFFFE0;
     font-family: 'Inter', sans-serif;
-  
+
 }
 
 header {
@@ -122,18 +122,22 @@ nav ul li a:hover {
 .registro {
     margin-bottom: 20px;
 }
+
 .registro label {
     font-size: 2.5vh;
     color: #000000;
     margin-top: 13vh;
 }
+
 .registro-label-1 {
-    margin-left: 12vw; 
+    margin-left: 12vw;
 }
+
 .registro-label-2 {
     margin-left: 15vw;
-    
+
 }
+
 .registro input {
     display: flex;
     flex-direction: column;
@@ -150,12 +154,14 @@ nav ul li a:hover {
     font-size: 2.5vh;
     box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
-    
+
 }
+
 .registro:hover {
     transform: scale(1.05);
     opacity: 0.9;
 }
+
 .botao {
     width: 20vw;
     height: 7vh;
@@ -174,6 +180,7 @@ nav ul li a:hover {
     margin-top: 1vh;
     transition: background-color 0.3s, color 0.3s;
 }
+
 .botao:hover {
     background-color: rgba(255, 255, 255, 0.3);
     color: #0057B6;
@@ -194,6 +201,7 @@ nav ul li a:hover {
 .registrar a:hover {
     text-decoration: underline;
 }
+
 footer {
     background-color: #0057B6;
     color: #fdfdfd;
@@ -205,13 +213,31 @@ footer {
     height: 2.5vh;
     font-size: 2vh;
 }
-#div_alert{
-    color: #FDCD1C;;
+
+#div_alert {
+    color: #FDCD1C;
+    ;
     text-align: center;
     margin: 2vh auto;
-    width: 15vw; 
+    width: 15vw;
     border-radius: 1vh;
     box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 1);
     background-color: #0057B6;
     margin-left: 45vw;
+}
+
+.loading {
+    color: #FDCD1C;
+    text-align: center;
+    margin: 2vh auto;
+    width: 15vw;
+    border-radius: 1vh;
+    margin-left: 45vw;
+    display: flex;
+    justify-content: center;
+}
+
+#loading-gif{
+    display:none;
+   height: 8vh;
 }
