--- a/Site-Dashboard/public/css/style.jogo.css
+++ b/Site-Dashboard/public/css/style.jogo.css
@@ -80,7 +80,7 @@ nav ul li a:hover {
     margin-top: 5vh;
     gap: 2vw;
     margin-left: 45px;
-    margin-right: 45px; 
+    margin-right: 30px; 
 }
 
 .esquerda {
@@ -88,7 +88,7 @@ nav ul li a:hover {
     flex-direction: column;
     width: 33.3%;
     background-color: #FDCD1C;
-    height: auto;
+    height: 80vh;
     border: solid 2px #0057B6;
 
 }
@@ -97,16 +97,18 @@ nav ul li a:hover {
     flex-direction: column;
     width: 33.3%;
     background-color: #FDCD1C;
-    height: auto;
+    height: 75vh;
     border: solid 2px #0057B6;
+    margin-top: 3vh;
 }
 .direita {   
     display: flex;
     flex-direction: column;
     width: 33.3%;
     background-color: #FDCD1C;
-    height: auto;
+    height: 75vh;
     border: solid 2px #0057B6;
+    margin-top: 3vh;
 
 }
 @keyframes fadeIn {
@@ -158,7 +160,7 @@ nav ul li a:hover {
     margin-left: 0.5vw;
     margin-right: 0.5vw;
     padding: 2px;
-    margin-top: 4vh;
+    margin-top: 3vh;
     margin-bottom: 1vh ;
     background-color: #0057B6;
     border: solid 2px white;
@@ -245,5 +247,12 @@ nav ul li a:hover {
 #div_jogo{
     color: white;;
     text-align: center;
-    background-color: red;
+    border-radius: 1vh;
+    box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 1);
+    background-color: #0057B6;
+    height: 3vh;
+    margin-top: -3vh;
+    z-index: 999;
+    position: absolute;
+    margin-left: 30vw;
 }
