--- a/Site-Dashboard/public/css/style.contato.css
+++ b/Site-Dashboard/public/css/style.contato.css
@@ -224,7 +224,7 @@ footer {
     height: 8vh;
 }
 #div_alert {
-    color: white;
+    color: black;
     text-align: center;
     border-radius: 1vh;
     box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 1);
